<resources>
    <string name="app_name">Todolist</string>
    <string name="add_new_note">add new note</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="commit">second commit</string>
    <string name="branch">test</string>
    <string name="edit">edit</string>
</resources>