<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="107dp">

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:text="@string/name" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="44dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/radioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:padding="16dp"
                android:text="@string/low"
                android:textColor="#0D47A1"/>

            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:padding="16dp"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/radioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="16dp"
                android:checked="true"
                android:text="@string/high"
                android:textColor="#CFD8DC" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>